# monte-carlo-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: calculate_greeks.py  price_option.py  simulate_gbm.py
src/quantmc/: cli.py
src/quantmc/analytics/: __init__.py  convergence.py  greeks.py  implied_volatility.py  plots.py  statistics.py  validation.py  variance_reduction.py
src/quantmc/examples/: american_option.py  compare_pricers.py  convergence.py  heston_benchmark.py  implied_volatility.py  performance_benchmark.py  validate_greeks.py  variance_benchmark.py  variance_reduction.py
src/quantmc/models/: gbm.py  heston.py
src/quantmc/options/: payoffs.py
src/quantmc/performance/: numba_gbm.py  numba_heston.py
src/quantmc/pricing/: __init__.py  black_scholes.py  longstaff_schwartz.py  monte_carlo.py
tests/: test_black_scholes.py  test_convergence.py  test_gbm.py  test_greek_validation.py  test_greeks.py  test_heston.py  test_heston_pricing.py  test_implied_volatility.py  test_longstaff_schwartz.py  test_monte_carlo_greeks.py  test_monte_carlo_statistics.py  test_payoffs.py  test_pricing.py  test_statistics.py  test_variance_reduction.py
