[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "quant-monte-carlo-engine"
version = "0.1.0"
description = "Monte Carlo derivatives pricing framework"
authors = [
    {name = "Mayank Deoras"}
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "tqdm"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[project.scripts]
quantmc = "quantmc.cli:main"